--- a/package.json
+++ b/package.json
@@ -15,42 +15,43 @@
   },
   "author": "Mike van Rossum <mike@mvr.me>",
   "dependencies": {
-    "async": "2.1.2",
-    "bitfinex-api-node": "^1.2.1",
+    "@koa/cors": "^5.0.0",
+    "async": "3.2.5",
+    "bitfinex-api-node": "^6.0.0",
     "co-fs": "^1.2.0",
-    "commander": "^2.13.0",
+    "commander": "^12.1.0",
     "gekko": "0.0.9",
-    "humanize-duration": "^3.10.0",
-    "koa": "^1.2.0",
-    "koa-bodyparser": "^2.2.0",
+    "humanize-duration": "^3.32.1",
+    "koa": "^2.15.3",
+    "koa-bodyparser": "^4.4.1",
     "koa-cors": "0.0.16",
-    "koa-logger": "^1.3.0",
-    "koa-router": "^5.4.0",
-    "koa-static": "^2.0.0",
-    "lodash": "2.x",
-    "moment": "^2.20.1",
-    "opn": "^4.0.2",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^12.0.1",
+    "koa-static": "^5.0.0",
+    "lodash": "4.x",
+    "moment": "^2.30.1",
+    "opn": "^5.5.0",
     "promisify-node": "^0.5.0",
     "prompt-lite": "0.1.1",
-    "relieve": "^2.1.3",
-    "retry": "^0.10.1",
-    "semver": "5.4.1",
-    "sqlite3": "^4.0.6",
-    "stats-lite": "^2.0.4",
-    "tiny-promisify": "^0.1.1",
-    "toml": "^2.3.0",
-    "ws": "^6.0.0"
+    "relieve": "^2.2.3",
+    "retry": "^0.13.1",
+    "semver": "7.6.2",
+    "sqlite3": "^5.1.7",
+    "stats-lite": "^2.2.0",
+    "tiny-promisify": "^1.0.0",
+    "toml": "^3.0.0",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.0.0",
-    "proxyquire": "^1.7.10",
+    "chai": "^5.1.1",
+    "mocha": "^10.4.0",
+    "proxyquire": "^2.1.3",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "sinon": "^4.2.0"
+    "sinon": "^18.0.0"
   },
   "engines": {
-    "node": ">=8.11.2"
+    "node": ">=18.0.0"
   },
   "license": "MIT",
   "repository": {
