--- a/web/vue/package.json
+++ b/web/vue/package.json
@@ -7,21 +7,22 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "marked": "^0.4.0",
-    "superagent": "^3.8.3",
+    "marked": "^12.0.2",
+    "npm-check-updates": "^16.14.20",
+    "superagent": "^9.0.2",
     "superagent-no-cache": "github:uditalias/superagent-no-cache",
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "babel-plugin-transform-commonjs-es2015-modules": "^4.0.1",
-    "copy-webpack-plugin": "^4.5.2",
-    "pug": "^2.0.3",
-    "pug-plain-loader": "^1.0.0",
-    "vue-template-compiler": "^2.5.16"
+    "copy-webpack-plugin": "^12.0.2",
+    "pug": "^3.0.3",
+    "pug-plain-loader": "^1.1.0",
+    "vue-template-compiler": "^2.7.16"
   },
   "postcss": {
     "plugins": {
