--- a/web/vue/package.json
+++ b/web/vue/package.json
@@ -7,13 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "marked": "^12.0.2",
+    "mitt": "^3.0.1",
     "npm-check-updates": "^16.14.20",
+    "reconnecting-websocket": "^4.4.0",
+    "save": "^2.9.0",
     "superagent": "^9.0.2",
     "superagent-no-cache": "github:uditalias/superagent-no-cache",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2",
-    "vuex": "^4.1.0"
+    "vue": "^3.5.13",
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
