fix function binding in backend (partially complete)

--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "@koa/cors": "^5.0.0",
     "async": "3.2.5",
+    "binance": "^2.13.18",
     "bitfinex-api-node": "^6.0.0",
     "co-fs": "^1.2.0",
     "commander": "^12.1.0",
+    "crypto-js": "^4.2.0",
     "gekko": "0.0.9",
     "humanize-duration": "^3.32.1",
     "koa": "^2.15.3",
@@ -28,6 +30,7 @@
     "koa-logger": "^3.2.1",
     "koa-router": "^12.0.1",
     "koa-static": "^5.0.0",
+    "kraken-api": "^1.0.2",
     "lodash": "4.x",
     "moment": "^2.30.1",
     "opn": "^5.5.0",
@@ -35,6 +38,7 @@
     "prompt-lite": "0.1.1",
     "relieve": "^2.2.3",
     "retry": "^0.13.1",
+    "save": "^2.9.0",
     "semver": "7.6.2",
     "sqlite3": "^5.1.7",
     "stats-lite": "^2.2.0",
